rendering in js

--- a/index1.html
+++ b/index1.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="app">
+        <!-- when you enter value in input text and press add then value will be added with index and click on that value it will remove also-->
       <h1>Rendering</h1>
       <input type="text" id="goal" v-model="entervalue" />
       <button @click="addgoal">ADD</button><br />
